# ElfBox

./: CMakeLists.txt  Elfbox.asta  README.md
cmake/: FindLua.cmake  FindSDL2.cmake  FindTinyXML2.cmake  FindTmxParser.cmake  FindToLua.cmake  FindZlib.cmake
res/: GameIntro.tmx  MainStateMachine.lua  MainStateMachine.xml  hello.lua  map.tmx  smScript.lua
res/map3/: map3.tmx
src/: CMakeLists.txt  Test.cpp  Test.hpp
src/common/: Application.cpp  Application.h  Context.cpp  Context.h  Context.pkg  DoubleList.cpp  DoubleList.h  ElfBoxEngine.cpp  ElfBoxEngine.h  Engine.cpp  Engine.h  Error.h  IApplicationCore.h  IElfBoxEngine.h  IEngine.h  IMessageBroadcaster.h  IObject.h  IObject.pkg  IObjectFactory.h  MessageBroadcaster.cpp  MessageBroadcaster.h  MessageId.h  ObjectFactory.cpp  ObjectFactory.h  TypeDefine.h  TypeDefine.pkg
src/common/detail/: MessageVariant.h
src/gamelogic/: Engine.cpp  Engine.h  GameData.cpp  GameData.h  GameDirector.cpp  GameDirector.h  GameManager.cpp  GameManager.h  GameManager.pkg  GameSprite.cpp  GameSprite.h  GameSprite.pkg  IEngine.h  IGameData.h  IGameDirector.h  IGameManager.h  IGameProcess.h  IGameSprite.h
src/gamelogic/processor/: SpriteMoveProcess.cpp  SpriteMoveProcess.h
src/gamelogic/scene/: Camera.cpp  IAnimation.h  ICamera.h  IScene.h  ISceneManager.h  ISceneNode.h  Scene.cpp  Scene.pkg  SceneManager.h  SceneNode.cpp  SceneNode.h  SceneNode.pkg  SceneTmxParser.h  Sprite.cpp  Sprite.h
src/gamelogic/scene/component/: AnimationComponent.cpp  AnimationComponent.h  NodeAnimation.cpp  NodeAnimation.h
src/gamelogic/scene/detail/: SceneTmxParserImpl.cpp  SceneTmxParserImpl.h
src/graphics/: Graphics.cpp  Graphics.h  GraphicsSDLImpl.cpp  GraphicsSDLImpl.h  IGraphics.h
src/graphics/detail/: GraphicsSDLImpl.cpp  GraphicsSDLImpl.h
src/render/: DrawableData.h  IDrawable.h  IRenderDevice.h  IRenderMaterial.h  ImageDrawable.cpp  ImageDrawable.h  Render.cpp  Render.h  RenderDevice.cpp  RenderDevice.h  RenderDevice.pkg  RenderDrawable.h  RenderMaterial.cpp  RenderMaterial.h  StaticDrawable.cpp  StaticDrawable.h
src/render/detail/: RenderDeviceImpl.cpp  RenderDeviceImpl.h  RenderMaterialImpl.cpp  RenderMaterialImpl.h
src/scene/: Camera.cpp  Camera.h  ICamera.h  INodeComponent.h  IScene.h  ISceneManager.h  ISceneNode.h  ISceneNodeFactory.h  ISceneTmxParser.h  NodeComponent.cpp  NodeComponent.h  Scene.cpp  Scene.h  Scene.pkg  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h  SceneNode.pkg  SceneNodeFactory.cpp  SceneNodeFactory.h  SceneTmxParser.cpp  SceneTmxParser.h
src/scene/component/: AnimationComponent.cpp  AnimationComponent.h  KeyComponent.cpp  KeyComponent.h  ScriptComponent.cpp  ScriptComponent.h
src/scene/detail/: SceneTmxParserImpl.cpp  SceneTmxParserImpl.h
src/script/: IScriptCenter.h  IScriptFunction.h  ScriptCenter.h
src/script/detail/: ScriptCenter.pkg  ScriptCenterImpl.cpp  ScriptCenterImpl.h  ScriptFunctionImpl.cpp  ScriptFunctionImpl.h  ScriptUtil.cpp  ScriptUtil.h
src/sm/: IState.h  IStateEvent.h  IStateMachine.h  State.cpp  State.h  StateEvent.cpp  StateEvent.h  StateEvent.pkg  StateMachine.h  StateMachine.pkg
src/sm/detail/: StateMachineImpl.cpp  StateMachineImpl.h
src/system/: IResource.h  IResourceCache.h  ISystemEventProcess.h  IThreadPool.h  ITimeService.h  IWindow.h  ResourceCache.cpp  ResourceCache.h  SystemEventProcess.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  TimeService.cpp  TimeService.h  TimeService.pkg  Window.cpp  Window.h  Window.pkg  WindowSDLImpl.cpp  WindowSDLImpl.h
src/system/detail/: IResourceWrapper.h  IThread.h  ResourceWrapper.cpp  ResourceWrapper.h  SystemEventProcessImpl.cpp  SystemEventProcessImpl.h  Thread.cpp  Thread.h  TimeServiceImpl.h  WindowSDLImpl.cpp  WindowSDLImpl.h
src/system/detail/platform/: TimeServiceOtherImpl.cpp  TimeServiceOtherImpl.h  TimeServiceWinImpl.cpp  TimeServiceWinImpl.h
src/util/: BaseLogger.cpp  BaseLogger.h  DataContainer.h  LoggerDomain.h
test/: testmain.cpp
